# Crypt2ByteCTRMethod

./: .gitignore  CMakeLists.txt  README.md  a.out  main.c  main.cpp
CryptByteCTRMethod/: pom.xml  pom.xml.old
CryptByteCTRMethod/src/main/java/doublepmcl/cryptbytectrmethod/: CompHexViewer.form  CompHexViewer.java  HexByteViewer.java  Main.java
EnDeCryptionJava/src/: HeyByteViewer.java
binaries/: create_key_2B_generic  crypt_2B_ctr_generic  crypt_2B_generic
ctr_encryption/: Makefile  build.sh  create_c_endecryption_function.py  ctr_encryption.c  ctr_encryption.h  endecryption_direct_access.c  endecryption_direct_access.h  go_all_files_directory.py  test.sh  utils.c  utils.h
files/: test_for_32_bytes.byte.bak  test_for_32_bytes_DEcrypted.byte  test_for_32_bytes_encrypted.byte
include/: check_key_2B_1k.h  create_key_2B_1k.h  create_key_2B_generic.h  crypt_2B_1k.h  crypt_2B_ctr_generic.h  crypt_2B_generic.h  endecryptutils.h  test_crypt_2B_block.h  test_print_block.h  utils.h
scripts/: compile.py  compile.sh  compile_test_crypt_2B_block.sh  compile_test_print_block.sh  crypt_script.py  prog_create_key_2B_generic.sh  prog_crypt_2B_ctr_generic.sh  prog_crypt_2B_generic.sh  prog_test_print_block.sh  start_cryption_2B_1k.sh
source/: check_key_2B_1k.c  create_key_16B_1k.c  create_key_2B_generic  create_key_2B_generic.c  crypt_2B_1k.c  crypt_2B_ctr_generic.c  crypt_2B_generic  crypt_2B_generic.c  endecryptutils.c  test_crypt_2B_block.c  test_print_block.c  utils.c
template/: template.c  template.h
